# filter-effect-engine

./: README.md
android/FilterEngineDemo/: settings.gradle
android/FilterEngineDemo/app/: build.gradle
android/FilterEngineDemo/filterengine/: CMakeLists.txt  build.gradle
android/FilterEngineDemo/filterengine/src/androidTest/java/com/me/filterengine/: ExampleInstrumentedTest.java
android/FilterEngineDemo/filterengine/src/main/: AndroidManifest.xml
android/FilterEngineDemo/filterengine/src/main/assets/filters/I1977/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/amaro/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/amatorka/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/antique/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/blackcat/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/brannan/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/calm/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/cool/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/earlybird/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/emerald/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/evergreen/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/fairytale/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/healthy/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/hefe/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/highkey/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/hudson/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/inkwell/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/kelvin/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/latte/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/lomo/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/nashville/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/nostalgia/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/rise/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/romance/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/sakura/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/sierra/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/sunrise/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/sunset/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/sutro/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/sweets/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/tender/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/toaster/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/valencia/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/walden/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/warm/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/whitecat/: config
android/FilterEngineDemo/filterengine/src/main/assets/filters/xproll/: config
android/FilterEngineDemo/filterengine/src/main/cpp/: filter_handler_jni.cpp  filter_handler_jni.h
android/FilterEngineDemo/filterengine/src/main/java/com/me/filterengine/: FileUtils.java  FilterHandler.java
android/FilterEngineDemo/filterengine/src/main/jniLibs/armeabi-v7a/include/libavfilter/: avfilter.h
android/FilterEngineDemo/filterengine/src/main/jniLibs/armeabi-v7a/include/libavutil/: ffversion.h
android/FilterEngineDemo/filterengine/src/main/jniLibs/armeabi-v7a/include/libffmpeg/: config.h
android/FilterEngineDemo/filterengine/src/main/res/values/: strings.xml
android/FilterEngineDemo/filterengine/src/test/java/com/me/filterengine/: ExampleUnitTest.java
src/: filter_handler.cpp  filter_handler.h
src/beautify/: beautify_filter.cpp  beautify_filter.h  beautify_manager.cpp  beautify_manager.h
src/common/: common.h  filter_interface.cpp  filter_interface.h  platform.h
src/decoder/: picture_decoder.cpp  picture_decoder.h
src/effect/: effect_interface.cpp  effect_interface.h
src/filter/: filter_factory.cpp  filter_factory.h  filter_manager.cpp  filter_manager.h
src/filter/adjust/: adjust_filter.cpp  adjust_filter.h  adjust_filter_manager.cpp  adjust_filter_manager.h
src/filter/advanced/: I1977_filter.cpp  I1977_filter.h  amaro_filter.cpp  amaro_filter.h  brannan_filter.cpp  brannan_filter.h  earlybird_filter.cpp  earlybird_filter.h  hefe_filter.cpp  hefe_filter.h  hudson_filter.cpp  hudson_filter.h  inkwell_filter.cpp  inkwell_filter.h  lomo_filter.cpp  lomo_filter.h  lordkelvin_filter.cpp  lordkelvin_filter.h  nashville_filter.cpp  nashville_filter.h  rise_filter.cpp  rise_filter.h  sierra_filter.cpp  sierra_filter.h  sutro_filter.cpp  sutro_filter.h  toaster_filter.cpp  toaster_filter.h  valencia_filter.cpp  valencia_filter.h  walden_filter.cpp  walden_filter.h  xproll_filter.cpp  xproll_filter.h
src/filter/base/: multi_input_filter.cpp  (+1 more)
src/utils/: common_utils.cpp  common_utils.h  default_drawer.cpp  default_drawer.h  gl_utils.cpp  gl_utils.h  parse_config.cpp  parse_config.h
(+67 files in other folders)
